deployments/kubernetes/base/auth/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: payment-gateway
spec:
  selector:
    app: auth
  ports:
  - name: http-metrics
    port: 8092
    targetPort: 8092
  - name: grpc
    port: 9012
    targetPort: 9012
  type: ClusterIP
